--- a/pages/brand.html
+++ b/pages/brand.html
@@ -9,13 +9,13 @@
             rel="stylesheet"
         />
 
-        <link rel="stylesheet" href="../css/brand.css" />
+        <link rel="stylesheet" href="css/brand.css" />
     </head>
     <body>
         <!-- 섹션1 -->
         <section id="brand">
             <video autoplay muted loop playsinline>
-                <source src="../img/brand/pn1_video.mp4" type="video/mp4" />
+                <source src="img/brand/pn1_video.mp4" type="video/mp4" />
             </video>
 
             <div class="brandText">
@@ -60,11 +60,11 @@
             <div class="brandRightbox_2">
                 <div>
                     <img
-                        src="../img/brand/m11_philosophy_img1.jpg"
+                        src="img/brand/m11_philosophy_img1.jpg"
                         alt="나무1"
                     />
                     <img
-                        src="../img/brand/m11_philosophy_img2.jpg"
+                        src="img/brand/m11_philosophy_img2.jpg"
                         alt="나무2"
                     />
                 </div>
@@ -76,7 +76,7 @@
             <div class="brandLeftbox_3">
                 <div>
                     <img
-                        src="../img/brand/m11_vyor_bg1.jpg"
+                        src="img/brand/m11_vyor_bg1.jpg"
                         alt="스크롤이미지"
                     />
                 </div>
@@ -183,7 +183,7 @@
 
             <div class="brandRightbox_4">
                 <div>
-                    <img src="../img/brand/m11_story_bg.jpg" alt="나무3" />
+                    <img src="img/brand/m11_story_bg.jpg" alt="나무3" />
 
                     <div class="brand4_Text">
                         <h2 style="font-weight: lighter">Watered soil</h2>
@@ -214,7 +214,7 @@
 
             <div class="BR5_inbox3">
                 <div class="BR5_imgBox">
-                    <img src="../img/brand/m11_notes_bg1.jpg" alt="레몬" />
+                    <img src="img/brand/m11_notes_bg1.jpg" alt="레몬" />
                     <div class="BR5_imgtxt">TOP NOTE</div>
                 </div>
 
@@ -236,7 +236,7 @@
 
             <div class="BR5_inbox3">
                 <div class="BR5_imgBox">
-                    <img src="../img/brand/m11_notes_bg2.jpg" alt="장미" />
+                    <img src="img/brand/m11_notes_bg2.jpg" alt="장미" />
                     <div class="BR5_imgtxt2">MIDDLE NOTE</div>
                 </div>
 
@@ -255,7 +255,7 @@
 
             <div class="BR5_inbox3">
                 <div class="BR5_imgBox">
-                    <img src="../img/brand/m11_notes_bg3.jpg" alt="나뭇가지" />
+                    <img src="img/brand/m11_notes_bg3.jpg" alt="나뭇가지" />
                     <div class="BR5_imgtxt3">BASE NOTE</div>
                 </div>
 
@@ -281,7 +281,7 @@
                 <div>
                     <img
                         class="BR6_scr_log"
-                        src="../img/brand/m11_btmVisual_logo.png"
+                        src="img/brand/m11_btmVisual_logo.png"
                         alt="스크롤로고"
                     />
                 </div>
