--- a/pages/brand_bi.html
+++ b/pages/brand_bi.html
@@ -10,13 +10,13 @@
             rel="stylesheet"
         />
 
-        <link rel="stylesheet" href="../css/brand.css" />
+        <link rel="stylesheet" href="css/brand.css" />
     </head>
     <body>
         <!--BI섹션1 -->
         <section id="brand">
             <video autoplay muted loop playsinline>
-                <source src="../img/brand/pn1_video.mp4" type="video/mp4" />
+                <source src="img/brand/pn1_video.mp4" type="video/mp4" />
             </video>
 
             <div class="brandText">
@@ -29,7 +29,7 @@
         <div class="Xbox">VYOR 브랜드 디자인 가이드라인</div>
         <section id="BI_2">
             <div class="BI2_Leftbox">
-                <img src="../img/brand/m12_sec1_img1.jpg" alt="디자인이미지" />
+                <img src="img/brand/m12_sec1_img1.jpg" alt="디자인이미지" />
             </div>
 
             <div class="BI2_Rightbox">
@@ -89,7 +89,7 @@
 
             <div class="BI3_Rightbox">
                 <img
-                    src="../img/brand/m12_sec1_img2.jpg"
+                    src="img/brand/m12_sec1_img2.jpg"
                     alt="본문서체이미지"
                 />
             </div>
@@ -156,7 +156,7 @@
             <div class="B5_outBox">
                 <div class="B5_imgBox">
                     <img
-                        src="../img/brand/m12_sec2_tm_bg.jpg"
+                        src="img/brand/m12_sec2_tm_bg.jpg"
                         alt="bi하단이미지"
                     />
                     <div class="B5_textBox">
