--- a/pages/contact_address.html
+++ b/pages/contact_address.html
@@ -88,7 +88,7 @@
     <!-- con섹션1 -->
     <section id="contact">
         <video autoplay muted loop playsinline>
-            <source src="../img/contact/pn5_video.mp4" type="video/mp4" />
+            <source src="img/contact/pn5_video.mp4" type="video/mp4" />
         </video>
 
         <div class="contactText">
