--- a/pages/rndProduction.html
+++ b/pages/rndProduction.html
@@ -9,7 +9,7 @@
 <body>
    <section id="rnd_sec1" class="videoWrap rnd_sec">
       <video id="video" autoplay muted loop>
-         <source src="./img/rnd/R&D.mp4" type="video/mp4">
+         <source src="img/rnd/R&D.mp4" type="video/mp4">
       </video>
 
       <div class="overlay">
@@ -29,8 +29,8 @@
       <div class="pro_grid">
          <div class="grid grid7">
             <div class="outImg">
-               <img src="/img/rnd/m33_img1.jpg" alt="이미지">
-               <img src="/img/rnd/m33_img2.jpg" alt="이미지">
+               <img src="img/rnd/m33_img1.jpg" alt="이미지">
+               <img src="img/rnd/m33_img2.jpg" alt="이미지">
             </div>
          </div>
          <div class="grid grid8">
@@ -114,7 +114,7 @@
               
          <div class="grid grid10">
             <div class="outImg">
-               <img src="/img/rnd/m33_img3.jpg" alt="이미지">
+               <img src="img/rnd/m33_img3.jpg" alt="이미지">
             </div>
          </div>
       </div>   
