--- a/pages/rndResearch.html
+++ b/pages/rndResearch.html
@@ -9,7 +9,7 @@
 <body>
    <section id="rnd_sec1" class="videoWrap rnd_sec">
       <video id="video" autoplay muted loop>
-         <source src="./img/rnd/R&D.mp4" type="video/mp4">
+         <source src="img/rnd/R&D.mp4" type="video/mp4">
       </video>
 
       <div class="overlay">
@@ -28,7 +28,7 @@
       </div>
       <div class="frame3">
          <div class="img_frame">
-            <img src="/img/rnd/m32_phil_bg.jpg" alt="">
+            <img src="img/rnd/m32_phil_bg.jpg" alt="">
             <h4>VYOR의 클린 뷰티 & 친환경 철학</h4>
             <div class="text_opacity">
                <div class="textBox">
@@ -84,35 +84,35 @@
          </div>
          <div class="iconImgBox ">
             <div class="benefit">
-               <img src="/img/rnd/m32_sec2_icon1.gif" alt="">
+               <img src="img/rnd/m32_sec2_icon1.gif" alt="">
                <p>비건</p>
             </div>
             <div class="benefit">
-               <img src="/img/rnd/m32_sec2_icon2.gif" alt="">
+               <img src="img/rnd/m32_sec2_icon2.gif" alt="">
                <p>클린뷰티</p>
             </div>
             <div class="benefit">
-               <img src="/img/rnd/m32_sec2_icon3.gif" alt="">
+               <img src="img/rnd/m32_sec2_icon3.gif" alt="">
                <p>친환경</p>
             </div>
             <div class="benefit">
-               <img src="/img/rnd/m32_sec2_icon4.gif" alt="">
+               <img src="img/rnd/m32_sec2_icon4.gif" alt="">
                <p>세포재생</p>
             </div>
             <div class="benefit">
-               <img src="/img/rnd/m32_sec2_icon5.gif" alt="">
+               <img src="img/rnd/m32_sec2_icon5.gif" alt="">
                <p>안티에이징</p>
             </div>
             <div class="benefit">
-               <img src="/img/rnd/m32_sec2_icon6.gif" alt="">
+               <img src="img/rnd/m32_sec2_icon6.gif" alt="">
                <p>항균.항염</p>
             </div>
             <div class="benefit">
-               <img src="/img/rnd/m32_sec2_icon7.gif" alt="">
+               <img src="img/rnd/m32_sec2_icon7.gif" alt="">
                <p>엑소좀</p>
             </div>
             <div class="benefit">
-               <img src="/img/rnd/m32_sec2_icon8.gif" alt="">
+               <img src="img/rnd/m32_sec2_icon8.gif" alt="">
                <p>미백.주름.탈모</p>
             </div>
          </div> 
