--- a/pages/rndTechnology.html
+++ b/pages/rndTechnology.html
@@ -9,7 +9,7 @@
 <body>
    <section id="rnd_sec1" class="videoWrap rnd_sec">
       <video id="video" autoplay muted loop>
-         <source src="./img/rnd/R&D.mp4" type="video/mp4">
+         <source src="img/rnd/R&D.mp4" type="video/mp4">
       </video>
 
       <div class="overlay">
@@ -37,7 +37,7 @@
       <div class="grid_container">
          <div class="grid grid1">
             <div class="outImg">
-               <img src="/img/rnd/m31_bg1_1.png" alt="">
+               <img src="img/rnd/m31_bg1_1.png" alt="">
                <div class="innerImg">
                </div>
                <div class="text_area">
@@ -73,8 +73,8 @@
          <div class="grid grid3">
             <div class="outImg ">
                <div class="grid3Img">
-                  <img src="/img/rnd/m31_bg3.jpg" alt="">
-                  <img src="/img/rnd/m31_bg4.jpg" alt="">
+                  <img src="img/rnd/m31_bg3.jpg" alt="">
+                  <img src="img/rnd/m31_bg4.jpg" alt="">
                </div>
                <div class="text_nmn">
                   <div>
@@ -100,7 +100,7 @@
       
          <div class="grid grid4">
             <div class="outImg">
-               <img src="/img/rnd/m31_bg2.jpg" alt="">
+               <img src="img/rnd/m31_bg2.jpg" alt="">
                <div class="innerImg"></div>
                <div class="text_area">
                   <h4>핵심 기술</h4>
