--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,13 +22,13 @@
             rel="stylesheet"
         />
 
-        <link rel="stylesheet" href="../css/contact.css" />
+        <link rel="stylesheet" href="css/contact.css" />
     </head>
     <body>
         <!-- con섹션1 -->
         <section id="contact">
             <video autoplay muted loop playsinline>
-                <source src="../img/contact/pn5_video.mp4" type="video/mp4" />
+                <source src="img/contact/pn5_video.mp4" type="video/mp4" />
             </video>
 
             <div class="contactText">
@@ -43,12 +43,12 @@
                 <div class="con2_LeftBox">
                     <div class="con2_ImgBox">
                         <img
-                            src="../img/contact/m51_img.jpg"
+                            src="img/contact/m51_img.jpg"
                             alt="con문의사진"
                         />
                         <img
                             class="conLog"
-                            src="../img/contact/m11_btmVisual_logo.png"
+                            src="img/contact/m11_btmVisual_logo.png"
                             alt="con로고"
                         />
                         <h3><span>VYOR</span>에게 지금 바로 문의하세요.</h3>
