--- a/pages/product_body_lotion.html
+++ b/pages/product_body_lotion.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="../css/product.css">
+    <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
 
 
@@ -14,7 +14,7 @@
     <!-- product_main 공통 -->
     <div class="product_main">
         <video class="product_video" autoplay muted  loop playsinline>
-            <source src="../img/products/00.video.mp4">
+            <source src="img/products/00.video.mp4">
         </video>
         <div class="product_mainTxt">
             <h1>Products</h1>
@@ -35,13 +35,13 @@
         <div class="product_detail_gridBox">
             <div class="product_detail_grid">
                 <div class="product_detail_imgbox">
-                    <img src="../img/products/thum_img_body_lotion.jpg" alt="">
+                    <img src="img/products/thum_img_body_lotion.jpg" alt="">
                 </div>
             </div>
             <div class="product_detail_grid">
-                <a href="../pages/product_body.html" class="product_detail_gridT1">
+                <a href="pages/product_body.html" class="product_detail_gridT1">
                     <p>view list</p>
-                    <div><img src="../img/etc/icon/btnMore_arr2.png" alt="arr2"></div>
+                    <div><img src="img/etc/icon/btnMore_arr2.png" alt="arr2"></div>
                 </a>
                 <div class="product_detail_gridT2">
                     <p>NMN<span class="gridT2_bar"></span>트라넥사믹애씨드<span class="gridT2_bar"></span>시어버터</p>
@@ -59,7 +59,7 @@
                     <div>트라넥사믹애씨드로 피부톤 개선 및 미백 효과</div>
                     <div>비건 시어버터로 풍부한 영양감 전달</div>
                     <div>산뜻하고 빠르게 흡수되는 비건 로션</div>
-                    <a href="../pages/contact.html">제품 문의하기</a>
+                    <a href="pages/contact.html">제품 문의하기</a>
                 </div>
             </div>
         </div>
