--- a/pages/press.html
+++ b/pages/press.html
@@ -6,6 +6,28 @@
     <title>Document</title>
 </head>
 <body>
-    press.html
+    <section id="press_sec1" class="videoWrap press_sec">
+      <video id="video" autoplay muted loop>
+         <source src="img/press/pn4_video.mp4" type="video/mp4">
+      </video>
+
+      <div class="overlay">
+         <h1>PRESS</h1>
+         <p>PRESS</p>
+      </div>
+   </section>
+   <section id="press_sec2" class="press_board press_sec">
+    <div class="boardBox">
+        <div class="imgBox">
+            <a href="#press_news"><img src="img/press/noimage.jpg" alt="vyor로고" /></a>
+        </div>
+        <div class="text_area">
+            <h4>비오르 홈페이지 오픈했습니다.</h4>
+            <p>비오르 홈페이지 오픈했습니다. 앞으로도 많은 관심과 성원 부탁드립니다.</p>
+            <p>2025.06.19</p>
+        </div>
+        <div class="h_line"></div>
+    </div>
+   </section>
 </body>
 </html>
