--- a/pages/press_news.html
+++ b/pages/press_news.html
@@ -6,6 +6,34 @@
     <title>Document</title>
 </head>
 <body>
-    press_news.html
+    <section id="press_sec1" class="videoWrap press_sec">
+      <video id="video" autoplay muted loop>
+         <source src="img/press/pn4_video.mp4" type="video/mp4">
+      </video>
+
+      <div class="overlay">
+         <h1>PRESS</h1>
+         <p>PRESS</p>
+      </div>
+   </section>
+   <section id="press_sec2" class="press_board_view press_sec">
+     <div class="boardBox">
+        <div class="text_area_tit">
+            <h2>비오르 홈페이지 오픈했습니다.</h2>
+            <p>2025.06.19</p>
+        </div>
+        <div class="text_area_des">
+            <h6>비오르 홈페이지 오픈했습니다.</h6>
+            <h6>앞으로도 많은 관심과 성원 부탁드립니다.</h6>
+        </div>
+        <div>
+            <a href="#press" class="listHam">
+                <div class="lines"></div>
+                <div class="lines"></div>
+                <div class="lines"></div>
+            </a>
+        </div>
+     </div>
+   </section>
 </body>
 </html>
