--- a/pages/product.html
+++ b/pages/product.html
@@ -22,10 +22,10 @@
 
 <!-- 메뉴 -->
     <div class="product_menus">
-        <a href="product.html"  class="product_menus_bold">전체보기</a><span class="product_menusBar"></span>
-        <a href="product_body.html">바디라인</a><span class="product_menusBar"></span>
-        <a href="product_hair.html">헤어라인</a><span class="product_menusBar"></span>
-        <a href="product_facial.html">페이셜라인</a>
+        <a href="#product" class="product_menus_bold">전체보기</a><span class="product_menusBar"></span>
+        <a href="#product_body">바디라인</a><span class="product_menusBar"></span>
+        <a href="#product_hair">헤어라인</a><span class="product_menusBar"></span>
+        <a href="#product_facial">페이셜라인</a>
     </div>
 
 <!-- 2 Page -->
@@ -56,7 +56,7 @@
     <div class="product_page3_outBox">
         <div class="product_page3">
             <div class="product_page3_gridBox">
-                <a href="product_body_lotion.html" class="product_page3_link">
+                <a href="#product_body_lotion" class="product_page3_link">
                     <div class="product_page3_gridBox_product">
                         <div class="product_page3_imgbox">
                             <img src="img/products/thum_img_body_lotion.jpg" alt="bodylotion">
@@ -76,7 +76,7 @@
                         <p>65,000원<span class="product_page3_bar"></span>500ml</p>
                     </div>
                 </div>
-                <a href="product_hair_shampoo.html" class="product_page3_link">
+                <a href="#product_hair_shampoo" class="product_page3_link">
                     <div class="product_page3_gridBox_product">
                         <div class="product_page3_imgbox">
                             <img src="img/products/thum_img_shampoo.jpg" alt="shampoo">
