--- a/pages/product_facial.html
+++ b/pages/product_facial.html
@@ -22,10 +22,10 @@
 
 <!-- 메뉴 -->
     <div class="product_menus">
-        <a href="product.html">전체보기</a><span class="product_menusBar"></span>
-        <a href="product_body.html">바디라인</a><span class="product_menusBar"></span>
-        <a href="product_hair.html">헤어라인</a><span class="product_menusBar"></span>
-        <a href="product_facial.html" class="product_menus_bold">페이셜라인</a>
+        <a href="#product">전체보기</a><span class="product_menusBar"></span>
+        <a href="#product_body">바디라인</a><span class="product_menusBar"></span>
+        <a href="#product_hair">헤어라인</a><span class="product_menusBar"></span>
+        <a href="#product_facial" class="product_menus_bold">페이셜라인</a>
     </div>
 
 <!-- 2 Page -->
