--- a/pages/rndResearch.html
+++ b/pages/rndResearch.html
@@ -22,7 +22,7 @@
       <div class="mid_menu">
          <ul class="sub_menu">
             <li><a href="#rndTechnology">테크놀로지</a></li>
-            <li><a href="#"><strong>연구분야</strong></a></li>
+            <li><a href="#rndResearch"><strong>연구분야</strong></a></li>
             <li><a href="#rndProduction">생산시설</a></li>
          </ul>
       </div>
@@ -83,38 +83,40 @@
             <h5>8가지 효능을 중심으로 각 특성에 맞는 제품을 개발하기 위해 다양한 방법을 적용하고 있습니다. 고객의 니즈에 맞춘 최적의 솔루션을 제공하기 위해 노력합니다.</h5>
          </div>
          <div class="iconImgBox ">
-            <div class="benefit">
-               <img src="img/rnd/m32_sec2_icon1.gif" alt="">
-               <p>비건</p>
-            </div>
-            <div class="benefit">
-               <img src="img/rnd/m32_sec2_icon2.gif" alt="">
-               <p>클린뷰티</p>
-            </div>
-            <div class="benefit">
-               <img src="img/rnd/m32_sec2_icon3.gif" alt="">
-               <p>친환경</p>
-            </div>
-            <div class="benefit">
-               <img src="img/rnd/m32_sec2_icon4.gif" alt="">
-               <p>세포재생</p>
-            </div>
-            <div class="benefit">
-               <img src="img/rnd/m32_sec2_icon5.gif" alt="">
-               <p>안티에이징</p>
-            </div>
-            <div class="benefit">
-               <img src="img/rnd/m32_sec2_icon6.gif" alt="">
-               <p>항균.항염</p>
-            </div>
-            <div class="benefit">
-               <img src="img/rnd/m32_sec2_icon7.gif" alt="">
-               <p>엑소좀</p>
-            </div>
-            <div class="benefit">
-               <img src="img/rnd/m32_sec2_icon8.gif" alt="">
-               <p>미백.주름.탈모</p>
-            </div>
+            <ul class="rollingBox">
+               <li class="benefit">
+                  <img src="img/rnd/m32_sec2_icon1.gif" alt="">
+                  <p>비건</p>
+               </li>
+               <li class="benefit">
+                  <img src="img/rnd/m32_sec2_icon2.gif" alt="">
+                  <p>클린뷰티</p>
+               </li>
+               <li class="benefit">
+                  <img src="img/rnd/m32_sec2_icon3.gif" alt="">
+                  <p>친환경</p>
+               </li>
+               <li class="benefit">
+                  <img src="img/rnd/m32_sec2_icon4.gif" alt="">
+                  <p>세포재생</p>
+               </li>
+               <li class="benefit">
+                  <img src="img/rnd/m32_sec2_icon5.gif" alt="">
+                  <p>안티에이징</p>
+               </li>
+               <li class="benefit">
+                  <img src="img/rnd/m32_sec2_icon6.gif" alt="">
+                  <p>항균.항염</p>
+               </li>
+               <li class="benefit">
+                  <img src="img/rnd/m32_sec2_icon7.gif" alt="">
+                  <p>엑소좀</p>
+               </li>
+               <li class="benefit">
+                  <img src="img/rnd/m32_sec2_icon8.gif" alt="">
+                  <p>미백.주름.탈모</p>
+               </li>
+            </ul>
          </div> 
       </div>
    </section> 
