--- a/pages/rndTechnology.html
+++ b/pages/rndTechnology.html
@@ -21,7 +21,7 @@
    <section id="rnd_sec2" class="rnd_content  rnd_sec">
       <div class="mid_menu">
          <ul class="sub_menu">
-            <li><a href="#"><strong>테크놀로지</strong></a></li>
+            <li><a href="#rndTechnology"><strong>테크놀로지</strong></a></li>
             <li><a href="#rndResearch">연구분야</a></li>
             <li><a href="#rndProduction">생산시설</a></li>
          </ul>
@@ -37,7 +37,6 @@
       <div class="grid_container">
          <div class="grid grid1">
             <div class="outImg">
-               <img src="img/rnd/m31_bg1_1.png" alt="">
                <div class="innerImg">
                </div>
                <div class="text_area">
@@ -100,7 +99,6 @@
       
          <div class="grid grid4">
             <div class="outImg">
-               <img src="img/rnd/m31_bg2.jpg" alt="">
                <div class="innerImg"></div>
                <div class="text_area">
                   <h4>핵심 기술</h4>
