--- a/pages/home.html
+++ b/pages/home.html
@@ -47,7 +47,7 @@
             VYOR은 당신의 본질을 깨우고, 자연스럽고 우아한 아름다움이 피어나는
             순간을 함께합니다.
           </p>
-          <a href="../pages/brand.html" class="home_view-more">view more <span>→</span></a>
+          <a href="#brand" data-page="brand" class="home_view-more link_brand">view more <span>→</span></a>
         </div>
       </div>
 
@@ -66,7 +66,7 @@
           <p class="home_slide-item">
             VYOR은 감각적인 도시의 스타일에 비건 철학과 자연에서 온 클린 성분만을 고집합니다.
           </p>
-          <a href="../pages/product.html" class="home_view-more home_slide-item">view more <span>→</span></a>
+          <a href="#product" data-page="product" class="home_view-more home_slide-item">view more <span>→</span></a>
         </div>
         <div class="home_product-gallery">
           
@@ -175,7 +175,7 @@
             기초 연구에서 응용 연구까지 철저하고 체계적인 접근 방식을 통해<br />
             새로운 제형을 개발하고, 이를 제품화하는 전 과정을 실현하고 있습니다.
           </p>
-          <a href="../pages/rndProduction.html" class="home_view-more home_slideUp-item">view more <span>→</span></a>
+          <a href="#rndProduction" data-page="rndProduction" class="home_view-more home_slideUp-item">view more <span>→</span></a>
         </div>
       </div>
     </section>
