--- a/pages/product_hair.html
+++ b/pages/product_hair.html
@@ -22,10 +22,10 @@
 
 <!-- 메뉴 -->
     <div class="product_menus">
-        <a href="product.html">전체보기</a><span class="product_menusBar"></span>
-        <a href="product_body.html">바디라인</a><span class="product_menusBar"></span>
-        <a href="product_hair.html" class="product_menus_bold">헤어라인</a><span class="product_menusBar"></span>
-        <a href="product_facial.html">페이셜라인</a>
+        <a href="#product">전체보기</a><span class="product_menusBar"></span>
+        <a href="#product_body">바디라인</a><span class="product_menusBar"></span>
+        <a href="#product_hair" class="product_menus_bold">헤어라인</a><span class="product_menusBar"></span>
+        <a href="#product_facial">페이셜라인</a>
     </div>
 
 <!-- 2 Page -->
@@ -57,7 +57,7 @@
 <div class="product_page3_outBox">
         <div class="product_page3">
             <div class="product_page3_gridBox">
-                <a href="product_hair_shampoo.html" class="product_page3_link">
+                <a href="#product_hair_shampoo" class="product_page3_link">
                     <div class="product_page3_gridBox_product">
                         <div class="product_page3_imgbox">
                             <img src="img/products/thum_img_shampoo.jpg" alt="shampoo">
