--- a/pages/rndProduction.html
+++ b/pages/rndProduction.html
@@ -23,7 +23,7 @@
          <ul class="sub_menu">
             <li><a href="#rndTechnology">테크놀로지</a></li>
             <li><a href="#rndResearch">연구분야</a></li>
-            <li><a href="#"><strong>생산시설</strong></a></li>
+            <li><a href="#rndProduction"><strong>생산시설</strong></a></li>
          </ul>
       </div>
       <div class="pro_grid">
@@ -56,60 +56,44 @@
    <section id="rnd_sec3" class="rnd_sec rnd_production_sec3">
       <div class="pro_grid">
          <div class="grid grid9">
-            <div class="tech_desc ">
-               <div class="text_rnd">
-                  <button class="title_btn">
-                     <div class="num_rnd">
-                        <h4>01</h4>
-                     </div>
-                     <div class="title">
-                        <h4>천연원료 추출 / 분리 / 정제기술</h4>
-                     </div>
-                  </button>
-                  <div class="desc_text">
-                     <p>천연물에서 유용성분을 추출하기 위해, 먼저 재료의 물리적 및 화학적 특성을 고려하여 적합한 추출 방법을 선택합니다. 이를 통해 추출 효율을 최적화하고 원하는 성분을 농축하여 순도 높은 원료로 개발하여 제품화합니다. 극성과 무극성에 따라 용매를 선택하고, 크로마토그라피와 원심분리 등의 분리 및 정제 과정을 거쳐 최종적으로 안전하고 효과적인 제품을 제공할 수 있습니다.</p>
+            <ul>
+               <li class="text_rnd active">
+                  <div class="title_btn">
+                     <span>01</span>
+                     <span>천연원료 추출 / 분리 / 정제기술</span>
                   </div>
-               </div>
-               <div class="text_rnd">
-                  <button class="title_btn">
-                     <div class="num_rnd">
-                        <h4>02</h4>
-                     </div>
-                     <div class="title">
-                        <h4>자가포식(Autophagy) 유도 기능성 소재 개발 및 제품화 기술</h4>
-                     </div>
-                  </button>
-                  <div class="desc_text">
-                     <p>천연물에서 유용성분을 추출하기 위해, 먼저 재료의 물리적 및 화학적 특성을 고려하여 적합한 추출 방법을 선택합니다. 이를 통해 추출 효율을 최적화하고 원하는 성분을 농축하여 순도 높은 원료로 개발하여 제품화합니다. 극성과 무극성에 따라 용매를 선택하고, 크로마토그라피와 원심분리 등의 분리 및 정제 과정을 거쳐 최종적으로 안전하고 효과적인 제품을 제공할 수 있습니다.</p>
+                  <ul class="desc_text">
+                     <li><p>천연물에서 유용성분을 추출하기 위해, 먼저 재료의 물리적 및 화학적 특성을 고려하여 적합한 추출 방법을 선택합니다. 이를 통해 추출 효율을 최적화하고 원하는 성분을 농축하여 순도 높은 원료로 개발하여 제품화합니다. 극성과 무극성에 따라 용매를 선택하고, 크로마토그라피와 원심분리 등의 분리 및 정제 과정을 거쳐 최종적으로 안전하고 효과적인 제품을 제공할 수 있습니다.</p></li>
+                  </ul>
+               </li>
+               <li class="text_rnd">
+                  <div class="title_btn">
+                     <span>02</span>
+                     <span>자가포식(Autophagy) 유도 기능성 소재 개발 및 제품화 기술</span>
                   </div>
-               </div>
-               <div class="text_rnd">
-                  <button class="title_btn">
-                     <div class="num_rnd">
-                        <h4>03</h4>
-                     </div>
-                     <div class="title">
-                        <h4>난용성 성분 가용화 기술</h4>
-                     </div>
-                  </button>
-                  <div class="desc_text">
-                     <p>천연물에서 유용성분을 추출하기 위해, 먼저 재료의 물리적 및 화학적 특성을 고려하여 적합한 추출 방법을 선택합니다. 이를 통해 추출 효율을 최적화하고 원하는 성분을 농축하여 순도 높은 원료로 개발하여 제품화합니다. 극성과 무극성에 따라 용매를 선택하고, 크로마토그라피와 원심분리 등의 분리 및 정제 과정을 거쳐 최종적으로 안전하고 효과적인 제품을 제공할 수 있습니다.</p>
+                  <ul class="desc_text">
+                     <li><p>천연물에서 유용성분을 추출하기 위해, 먼저 재료의 물리적 및 화학적 특성을 고려하여 적합한 추출 방법을 선택합니다. 이를 통해 추출 효율을 최적화하고 원하는 성분을 농축하여 순도 높은 원료로 개발하여 제품화합니다. 극성과 무극성에 따라 용매를 선택하고, 크로마토그라피와 원심분리 등의 분리 및 정제 과정을 거쳐 최종적으로 안전하고 효과적인 제품을 제공할 수 있습니다.</p></li>
+                  </ul>
+               </li>
+               <li class="text_rnd">
+                  <div class="title_btn">
+                     <span>03</span>
+                     <span>난용성 성분 가용화 기술</span>
                   </div>
-               </div>
-               <div class="text_rnd">
-                  <button class="title_btn">
-                     <div class="num_rnd">
-                        <h4>04</h4>
-                     </div>
-                     <div class="title">
-                        <h4>리포좀 / 엑소좀 스킨부스터 기술</h4>
-                     </div>
-                  </button>
-                  <div class="desc_text">
-                     <p>천연물에서 유용성분을 추출하기 위해, 먼저 재료의 물리적 및 화학적 특성을 고려하여 적합한 추출 방법을 선택합니다. 이를 통해 추출 효율을 최적화하고 원하는 성분을 농축하여 순도 높은 원료로 개발하여 제품화합니다. 극성과 무극성에 따라 용매를 선택하고, 크로마토그라피와 원심분리 등의 분리 및 정제 과정을 거쳐 최종적으로 안전하고 효과적인 제품을 제공할 수 있습니다.</p>
+                  <ul class="desc_text">
+                     <li><p>천연물에서 유용성분을 추출하기 위해, 먼저 재료의 물리적 및 화학적 특성을 고려하여 적합한 추출 방법을 선택합니다. 이를 통해 추출 효율을 최적화하고 원하는 성분을 농축하여 순도 높은 원료로 개발하여 제품화합니다. 극성과 무극성에 따라 용매를 선택하고, 크로마토그라피와 원심분리 등의 분리 및 정제 과정을 거쳐 최종적으로 안전하고 효과적인 제품을 제공할 수 있습니다.</p></li>
+                  </ul>
+               </li>
+               <li class="text_rnd">
+                  <div class="title_btn">
+                     <span>04</span>
+                     <span>리포좀 / 엑소좀 스킨부스터 기술</span>
                   </div>
-               </div>
-            </div>
+                  <ul class="desc_text">
+                     <li><p>천연물에서 유용성분을 추출하기 위해, 먼저 재료의 물리적 및 화학적 특성을 고려하여 적합한 추출 방법을 선택합니다. 이를 통해 추출 효율을 최적화하고 원하는 성분을 농축하여 순도 높은 원료로 개발하여 제품화합니다. 극성과 무극성에 따라 용매를 선택하고, 크로마토그라피와 원심분리 등의 분리 및 정제 과정을 거쳐 최종적으로 안전하고 효과적인 제품을 제공할 수 있습니다.</p></li>
+                  </ul>
+               </li>
+            </ul>
          </div>
               
          <div class="grid grid10">
