--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,13 +22,13 @@
             rel="stylesheet"
         />
 
-        <link rel="stylesheet" href="../css/contact.css" />
+        <link rel="stylesheet" href="css/contact.css" />
     </head>
     <body>
         <!-- con섹션1 -->
         <section id="contact">
             <video autoplay muted loop playsinline>
-                <source src="../img/contact/pn5_video.mp4" type="video/mp4" />
+                <source src="img/contact/pn5_video.mp4" type="video/mp4" />
             </video>
 
             <div class="contactText">
@@ -42,13 +42,10 @@
             <div class="con2_outBox">
                 <div class="con2_LeftBox">
                     <div class="con2_ImgBox">
-                        <img
-                            src="../img/contact/m51_img.jpg"
-                            alt="con문의사진"
-                        />
+                        <img src="img/contact/m51_img.jpg" alt="con문의사진" />
                         <img
                             class="conLog"
-                            src="../img/contact/m11_btmVisual_logo.png"
+                            src="img/contact/m11_btmVisual_logo.png"
                             alt="con로고"
                         />
                         <h3><span>VYOR</span>에게 지금 바로 문의하세요.</h3>
@@ -82,5 +79,67 @@
                 <div class="con2_bottomBox"></div>
             </div>
         </section>
+
+        <!-- con섹션1 -->
+
+        <script>
+            const contact_sec = document.getElementById("contact");
+            const contact_text = contact_sec.querySelector(".contactText");
+
+            let contact_ready = false;
+            let contact_rafId = null;
+
+            contact_text.addEventListener("animationend", () => {
+                contact_text.style.animation = "none";
+                contact_text.style.transform = "translateY(0)";
+                contact_ready = true;
+                contact_onScroll();
+            });
+
+            function contact_applyProgress(progress) {
+                const vw = window.innerWidth;
+                const startLeft = 0.05 * vw;
+                const endLeft = -0.55 * vw;
+
+                const eased = 1 - Math.pow(1 - progress, 0.1);
+
+                // 투명도
+                const opacity = 1 - Math.pow(progress, 1.3);
+
+                const left = startLeft + (endLeft - startLeft) * eased;
+
+                contact_text.style.left = left + "px";
+                contact_text.style.opacity = opacity.toFixed(3);
+            }
+
+            function contact_onScroll() {
+                if (!contact_ready) return;
+                if (contact_rafId) return;
+
+                contact_rafId = requestAnimationFrame(() => {
+                    contact_rafId = null;
+
+                    const rect = contact_sec.getBoundingClientRect();
+                    const vh = window.innerHeight;
+
+                    const startY = vh * 0.9;
+                    const endY = vh * 0.05;
+                    let progress = (startY - rect.bottom) / (startY - endY);
+                    progress = Math.min(Math.max(progress, 0), 1);
+
+                    progress = progress < 0.02 ? 0 : progress;
+                    progress = progress > 0.98 ? 1 : progress;
+
+                    contact_applyProgress(progress);
+                });
+            }
+
+            window.addEventListener("scroll", contact_onScroll, {
+                passive: true,
+            });
+            window.addEventListener("resize", contact_onScroll, {
+                passive: true,
+            });
+        </script>
     </body>
 </html>
