--- a/pages/brand.html
+++ b/pages/brand.html
@@ -333,6 +333,7 @@
 
             //섹션3
 
+            //왼쪽이미지상자 기능
             (function brand3FadeGallery() {
                 const section = document.getElementById("brand_3");
                 if (!section) return;
@@ -354,6 +355,61 @@
                     slidesBox.appendChild(img);
                 });
             })();
+
+            //오른쪽박스 아코디언
+
+            document.addEventListener("DOMContentLoaded", function () {
+                const wrap = document.querySelector(
+                    "#brand_3 .brandRightbox_3"
+                );
+                if (!wrap) return;
+
+                const brand3_items = wrap.querySelectorAll("li");
+
+                const brand3_toggleItem = (targetLi) => {
+                    const isOpen = targetLi.classList.contains("brand3-open");
+                    brand3_items.forEach((o) => {
+                        o.classList.remove("brand3-open");
+                        o.setAttribute("aria-expanded", "false");
+                    });
+                    if (!isOpen) {
+                        targetLi.classList.add("brand3-open");
+                        targetLi.setAttribute("aria-expanded", "true");
+                    }
+                };
+
+                brand3_items.forEach((li) => {
+                    const front = li.querySelector(".front") || li;
+
+                    // 클릭 영역: front + li
+                    front.addEventListener("click", (e) => {
+                        e.preventDefault();
+                        brand3_toggleItem(li);
+                    });
+                    li.addEventListener("click", (e) => {
+                        // 내부 링크/버튼 클릭은 무시
+                        const t = e.target;
+                        if (t.closest("a, button")) return;
+                        brand3_toggleItem(li);
+                    });
+
+                    // 키보드 접근
+                    front.setAttribute("role", "button");
+                    front.setAttribute("tabindex", "0");
+                    front.addEventListener("keydown", (e) => {
+                        if (e.key === "Enter" || e.key === " ") {
+                            e.preventDefault();
+                            brand3_toggleItem(li);
+                        }
+                    });
+                });
+
+                // 기본으로 첫 번째 열기 (원치 않으면 제거)
+                if (brand3_items[0]) {
+                    brand3_items[0].classList.add("brand3-open");
+                    brand3_items[0].setAttribute("aria-expanded", "true");
+                }
+            });
         </script>
     </body>
 </html>
