--- a/pages/brand.html
+++ b/pages/brand.html
@@ -96,7 +96,7 @@
 
                     <li>
                         <div class="front">
-                            <div class="tit1"><span>V</span>YOR</div>
+                            <div class="tit1">V<span>Y</span>OR</div>
                             <div class="tit2">Your</div>
                         </div>
                         <div class="hidden">
@@ -110,7 +110,7 @@
 
                     <li>
                         <div class="front">
-                            <div class="tit1"><span>V</span>YOR</div>
+                            <div class="tit1">VY<span>O</span>R</div>
                             <div class="tit2">Opulence</div>
                         </div>
                         <div class="hidden">
@@ -124,7 +124,7 @@
 
                     <li>
                         <div class="front">
-                            <div class="tit1"><span>V</span>YOR</div>
+                            <div class="tit1">VYO<span>R</span></div>
                             <div class="tit2">Radiance</div>
                         </div>
                         <div class="hidden">
@@ -142,7 +142,9 @@
         <!-- 섹션4 -->
         <section id="brand_4">
             <div class="brandLeftbox_4">
-                <p style="color: #1a1a1a; font-size: 21px">VYOR Story</p>
+                <p style="color: #1a1a1a; font-size: 23px; font-weight: 400">
+                    VYOR Story
+                </p>
                 <h1 style="color: #1a1a1a; font-size: 53px">
                     What is the VYOR story?
                 </h1>
@@ -315,7 +317,6 @@
                     let progress = (startY - rect.bottom) / (startY - endY);
                     progress = Math.min(Math.max(progress, 0), 1);
 
-                    // 위로 올릴 때도 자연스럽게
                     progress = progress < 0.02 ? 0 : progress;
                     progress = progress > 0.98 ? 1 : progress;
 
@@ -331,9 +332,9 @@
                 passive: true,
             });
 
-            //섹션3
+            //섹션3-------------
 
-            //왼쪽이미지상자 기능
+            //왼쪽이미지상자
             (function brand3FadeGallery() {
                 const section = document.getElementById("brand_3");
                 if (!section) return;
@@ -356,60 +357,37 @@
                 });
             })();
 
-            //오른쪽박스 아코디언
+            //섹션3 오른쪽
 
-            document.addEventListener("DOMContentLoaded", function () {
-                const wrap = document.querySelector(
-                    "#brand_3 .brandRightbox_3"
+            (function () {
+                document.addEventListener(
+                    "click",
+                    function (e) {
+                        const front = e.target.closest(
+                            "#brand_3 .brandRightbox_3 .front"
+                        );
+                        if (!front) return;
+
+                        const li = front.closest("li");
+                        if (!li) return;
+
+                        const list = li.parentElement;
+                        const isOpen = li.classList.contains("brand3-on");
+
+                        list.querySelectorAll(":scope > li").forEach((el) =>
+                            el.classList.remove("brand3-on")
+                        );
+
+                        if (!isOpen) li.classList.add("brand3-on");
+                    },
+                    { capture: true }
                 );
-                if (!wrap) return;
 
-                const brand3_items = wrap.querySelectorAll("li");
-
-                const brand3_toggleItem = (targetLi) => {
-                    const isOpen = targetLi.classList.contains("brand3-open");
-                    brand3_items.forEach((o) => {
-                        o.classList.remove("brand3-open");
-                        o.setAttribute("aria-expanded", "false");
-                    });
-                    if (!isOpen) {
-                        targetLi.classList.add("brand3-open");
-                        targetLi.setAttribute("aria-expanded", "true");
-                    }
-                };
-
-                brand3_items.forEach((li) => {
-                    const front = li.querySelector(".front") || li;
-
-                    // 클릭 영역: front + li
-                    front.addEventListener("click", (e) => {
-                        e.preventDefault();
-                        brand3_toggleItem(li);
-                    });
-                    li.addEventListener("click", (e) => {
-                        // 내부 링크/버튼 클릭은 무시
-                        const t = e.target;
-                        if (t.closest("a, button")) return;
-                        brand3_toggleItem(li);
-                    });
-
-                    // 키보드 접근
-                    front.setAttribute("role", "button");
-                    front.setAttribute("tabindex", "0");
-                    front.addEventListener("keydown", (e) => {
-                        if (e.key === "Enter" || e.key === " ") {
-                            e.preventDefault();
-                            brand3_toggleItem(li);
-                        }
-                    });
-                });
-
-                // 기본으로 첫 번째 열기 (원치 않으면 제거)
-                if (brand3_items[0]) {
-                    brand3_items[0].classList.add("brand3-open");
-                    brand3_items[0].setAttribute("aria-expanded", "true");
-                }
-            });
+                const first = document.querySelector(
+                    "#brand_3 .brandRightbox_3 li"
+                );
+                if (first) first.classList.add("brand3-on");
+            })();
         </script>
     </body>
 </html>
