--- a/pages/brand_bi.html
+++ b/pages/brand_bi.html
@@ -38,7 +38,7 @@
                         Logo Typeface
                     </h1>
                     <h3 style="font-weight: 400; font-size: 22px">로고 서체</h3>
-                    <div style="color: #838181">
+                    <div style="color: #666">
                         Playfair Display 및 Didot 와 같은 세리프체를 사용하여
                         우아함과 세련됨을 전달합니다.<br />
                         이 서체는 정제된 아름다움과 미니멀리즘이라는 VYOR의
@@ -70,7 +70,7 @@
                         Logo Typeface
                     </h1>
                     <h3 style="font-weight: 400; font-size: 22px">본문 서체</h3>
-                    <div style="color: #838181">
+                    <div style="color: #666">
                         Libre Baskerville 는 긴 문단에서도 가독성이 뛰어나
                         본문용 서체로 사용됩니다.<br />
                         웹과 인쇄물 모두에서 클래식하고 신뢰감을 주는 느낌을
@@ -228,6 +228,8 @@
             window.addEventListener("resize", brand_onScroll, {
                 passive: true,
             });
+
+            // BI섹션2
         </script>
     </body>
 </html>
