프로덕트(2페이지, 상세페이지) 수정

--- a/pages/product.html
+++ b/pages/product.html
@@ -43,9 +43,9 @@
             <div class="product_p2txt2">
                 <h4>"촉촉한 흙, 젖은 나무, 싱그러운 공기 속 깊은 평온함"</h4>
                 <p>
-                    도시 속에서도 자연의 숨결을 느낄 수 있도록 설계 된 VYOR의 시그니처 향 입니다. 비에<br>
-                    젖은 숲길을 걷는 듯한 자연의 정화감, 그리고 피부와 마음을 채우는 차분하고 깊은 잔향이<br>
-                    페이셜, 바디, 헤어 전 제품에 은은하게 스며들어 사용자의 일상에 감감적 여운을 남깁니다.<br>
+                    도시 속에서도 자연의 숨결을 느낄 수 있도록 설계 된 VYOR의 시그니처 향 입니다. 비에
+                    젖은 숲길을 걷는 듯한 자연의 정화감, 그리고 피부와 마음을 채우는 차분하고 깊은 잔향이
+                    페이셜, 바디, 헤어 전 제품에 은은하게 스며들어 사용자의 일상에 감감적 여운을 남깁니다.
                     NMN, 트라넥사믹애씨드, 식물성 성분으로 피부를 채워줍니다.
                 </p>
             </div>
@@ -120,6 +120,5 @@
             </div>
         </div>
     </div>
-
 </body>
 </html>
